[package]
name = "syncwrap"
version = "0.1.0"
authors = ["michael <mcarson898@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Automatically wraps async functions in a synchronous wrapper based on feature flags"
repository = "https://github.com/mjcarson/syncwrap.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
futures = "0.3"
tokio = "0.3"
